# arsenal_corners

./: .gitignore  LICENSE  README.md  clustering.py  corner_analysis.ipynb  corner_similarity_clustering.py  main.py  plotting_tools.py  pyproject.toml  role_aggregated_kmeans_clustering.py  settings.py  utils.py
clustering/: corner_similarity_clustering.py  kmeans_clustering.py  role_aggregated_kmeans_clustering.py  similarity.py  spectral_clustering.py
data/: corners.csv  players.csv
docs/: all_corner_paths.md  all_hand_clustered_results.md  all_kmeans_results.md  all_spectral_results.md  index.md
images/: corners_play_quality_ranking.csv
tools/: plotting_tools.py  settings.py  utils.py
