[project]
name = "arsenal-corners"
version = "0.1.0"
description = ""
authors = [
    {name = "gsheir",email = "gsheir@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black[jupyter] (>=25.9.0,<26.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "mplsoccer (>=1.5.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false