[project]
name = "arsenal-corners"
version = "0.1.0"
description = ""
authors = [{ name = "gsheir", email = "gsheir@outlook.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "matplotlib>=3.10.7",
    "mplsoccer>=1.5.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "ruff>=0.14.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]



[tool.uv]
package = false
